--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbower -->
         <script src="assets/js/global.js"></script>
     </body>
