--- a/index.html
+++ b/index.html
@@ -111,5 +111,14 @@
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbower -->
         <script src="assets/js/global.js"></script>
+
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+                function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+                e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+                e.src='//www.google-analytics.com/analytics.js';
+                r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+                ga('create','UA-29173059-6');ga('send','pageview');
+        </script>
     </body>
 </html>
