Update for the new arrival

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Thank You... | Liam and Gemma</title>
+  <title>404 couple not found! | Liam and Gemma</title>
   <meta name="description" content="To all of those who've got us this far... thank you...">
   <meta name="viewport" content="width=device-width">
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
@@ -41,35 +41,32 @@
   <meta property="og:description" content="To all of those who've got us this far... thank you..." />
   <meta property="og:image" content="http://liamandgemma.co.uk/images/going-home.max.jpg" />
 
-  <link href="http://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel=stylesheet type=text/css>
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    html,
+    body {
+      box-sizing: border-box;
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+
+      text-align: center;
+    }
+
+    body {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding: 2em;
+    }
+  </style>
 </head>
-
 <body>
-  <main class="letter">
-    <img class="letter__background" src="images/going-home.optimized.jpg" alt="We're going home..." />
-
-    <div class="letter__content">
-      <h1 class="letter__title">Thank you...</h1>
-
-      <p>
-        To you, you're one of the many people who've helped us come this far. You were there before, you were there when we tied the knot and wherever you may be now, we send our thanks.
-      </p>
-      <p>
-        We can hardly believe it's nearly three years since the wedding and so much has happened since then. We've travelled, we've grown as people and as professionals, we bought our first home and now we've been lucky enough to become parents. William Philip Walsh has been by far the greatest of all our moments in both our lives combined. He has given more to us then we can ever hope to give to him.
-      </p>
-      <p>
-        We thank you, for when you joined us in saying "I do" William was only a matter of time.
-      </p>
-
-      <p class="letter__signature">
-        Yours most gratefully,
-        <br>
-        Liam, Gemma and William 👪
-      </p>
-    </div>
-
-  </main>
+  <h1 class="page-title">404 couple not found!<br> Maybe <a href="/">try here</a> instead.</h1>
 
   <!-- Let's register our serviceworker -->
   <script>
@@ -96,5 +93,4 @@
     ga('send', 'pageview');
   </script>
 </body>
-
 </html>
