Fixing service worker

--- a/404.html
+++ b/404.html
@@ -41,7 +41,6 @@
   <meta property="og:description" content="To all of those who've got us this far... thank you..." />
   <meta property="og:image" content="http://liamandgemma.co.uk/images/going-home.max.jpg" />
 
-  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel=stylesheet type=text/css>
   <link rel="stylesheet" href="css/main.css">
   <style>
     html,
@@ -68,10 +67,13 @@
 <body>
   <h1 class="page-title">404 couple not found!<br> Maybe <a href="/">try here</a> instead.</h1>
 
+  <!-- Google Web Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Lora:400,400i,700,700i" rel="stylesheet">
+
   <!-- Let's register our serviceworker -->
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('./service-worker.js')
     }
   </script>
 
