--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <meta name="twitter:site" content="@LiamWalshWeb" />
   <meta name="twitter:title" content="Thank You... | Liam and Gemma" />
   <meta name="twitter:description" content="To all of those who've got us this far... thank you..." />
-  <meta name="twitter:image" content="http://liamandgemma.co.uk/images/going-home.max.jpg" />
+  <meta name="twitter:image" content="https://liamandgemma.co.uk/images/going-home.max.jpg" />
 
   <!-- Facebook Meta Data -->
-  <meta property="og:url" content="http://liamandgemma.co.uk/" />
+  <meta property="og:url" content="https://liamandgemma.co.uk/" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Thank You..." />
   <meta property="og:description" content="To all of those who've got us this far... thank you..." />
-  <meta property="og:image" content="http://liamandgemma.co.uk/images/going-home.max.jpg" />
+  <meta property="og:image" content="https://liamandgemma.co.uk/images/going-home.max.jpg" />
 
   <link rel="stylesheet" href="css/main.css">
 </head>
