--- a/404.html
+++ b/404.html
@@ -53,6 +53,7 @@
     }
   </style>
 </head>
+
 <body>
   <h1 class="page-title">404 couple not found!<br> Maybe <a href="/">try here</a> instead.</h1>
 
@@ -67,21 +68,18 @@
   </script>
 
   <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111767370-2"></script>
   <script>
-    (function(b, o, i, l, e, r) {
-      b.GoogleAnalyticsObject = l;
-      b[l] || (b[l] =
-        function() {
-          (b[l].q = b[l].q || []).push(arguments)
-        });
-      b[l].l = +new Date;
-      e = o.createElement(i);
-      r = o.getElementsByTagName(i)[0];
-      e.src = '//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e, r)
-    }(window, document, 'script', 'ga'));
-    ga('create', 'UA-29173059-6');
-    ga('send', 'pageview');
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111767370-2');
   </script>
+
 </body>
+
 </html>
